--- a/Basic Python exercises solutions/list.ipynb
+++ b/Basic Python exercises solutions/list.ipynb
@@ -9,14 +9,9 @@
     "#!/usr/bin/env python3 -tt\n",
     "# Copyright 2010 Google Inc.\n",
     "# Licensed under the Apache License, Version 2.0\n",
-    "# http://www.apache.org/licenses/LICENSE-2.0\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Python 3 version https://github.com/eladeyal-intel/python_exercise"
+    "# http://www.apache.org/licenses/LICENSE-2.0\n",
+    "# Python 3 version https://github.com/eladeyal-intel/python_exercise\n",
+    "from __future__ import print_function"
    ]
   },
   {
@@ -32,22 +27,11 @@
    "metadata": {},
    "source": [
     "# Basic list exercises\n",
-    "Fill in the code for the functions below. main() is already set up\n",
-    "to call the functions with a few different inputs,\n",
-    "printing 'OK' when each function is correct.\n",
-    "The starter code for each function includes a 'return'\n",
-    "which is just a placeholder for your code.\n",
-    "It's ok if you do not complete all the functions, and there\n",
-    "are some additional functions to try in list2.py."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from __future__ import print_function"
+    "Fill in the code for the functions below. We have included some test functions with a few different inputs, printing 'OK' when each function is correct.\n",
+    "\n",
+    "The starter code for each function includes a 'return' which is just a placeholder for your code.\n",
+    "\n",
+    "It's ok if you do not complete all the functions, and there are some additional functions to try in the file \"list2\"."
    ]
   },
   {
@@ -156,7 +140,7 @@
     "test(front_x(['ccc', 'bbb', 'aaa', 'xcc', 'xaa']),\n",
     "             ['xaa', 'xcc', 'aaa', 'bbb', 'ccc'])\n",
     "test(front_x(['mix', 'xyz', 'apple', 'xanadu', 'aardvark']),\n",
-    "             ['xanadu', 'xyz', 'aardvark', 'apple', 'mix'])\n"
+    "             ['xanadu', 'xyz', 'aardvark', 'apple', 'mix'])"
    ]
   },
   {
@@ -179,7 +163,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# LAB(begin solution)<br>\n",
+    "# LAB(begin solution)\n",
     "# Extract the last element from a tuple -- used for custom sorting below.\n",
     "\n",
     "def last(a):\n",
