--- a/Python Basics exercises solutions/wordcount.ipynb
+++ b/Python Basics exercises solutions/wordcount.ipynb
@@ -23,10 +23,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Wordcount exercise"
    ]
@@ -52,27 +50,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Wordcount exercise\n",
+    "## exercise\n",
     "\n",
-    "Implement a print_words(filename) function that counts\n",
-    "how often each word appears in the text and prints:<br>\n",
+    "1. Implement a `print_words(filename)` function that counts how often each word appears in the text and prints:<br>\n",
     "word1 count1<br>\n",
     "word2 count2<br>\n",
     "...<br>\n",
     "\n",
-    "1. Print the above list in order sorted by word (python will sort punctuation to come before letters -- that's fine). Store all the words as lowercase, so 'Thep' and 'the' count as the same word.\n",
+    "Print the above list in order sorted by word (python will sort punctuation to come before letters -- that's fine). Store all the words as lowercase, so 'The' and 'the' count as the same word.\n",
     "\n",
-    "2. Implement a print_top(filename) which is similar\n",
-    "to print_words() but which prints just the top 5 most common words sorted so the most common word is first, then the next most common, and so on.\n",
+    "2. Implement a `print_top(filename)` which is similar to `print_words()` but which prints just the top 5 most common words sorted so the most common word is first, then the next most common, and so on.\n",
     "\n",
-    "Use str.split() (no arguments) to split on all whitespace.\n",
+    "Use `str.split()` (no arguments) to split on all whitespace.\n",
     "\n",
-    "Workflow: don't build the whole program at once. Get it to an intermediate \n",
-    "milestone and print your data structure and sys.exit(0).<br>\n",
-    "When that's working, try for the next milestone.<br>\n",
+    "Workflow: Don't build the whole program at once. Get it to an intermediate \n",
+    "milestone and print your data structure. When that's working, try for the next milestone.\n",
     "\n",
     "Optional: define a helper function to avoid code duplication inside\n",
-    "print_words() and print_top().\n"
+    "`print_words()` and `print_top()`."
    ]
   },
   {
@@ -132,7 +127,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Tests"
+    "## Test"
    ]
   },
   {
