--- a/Python Basics exercises/string.ipynb
+++ b/Python Basics exercises/string.ipynb
@@ -44,7 +44,7 @@
    "source": [
     "## donuts\n",
     "Given an int count of a number of donuts, return a string\n",
-    "of the form 'Number of donuts: <count>', where <count> is the number\n",
+    "of the form 'Number of donuts: COUNT', where COUNT is the number\n",
     "passed in. However, if the count is 10 or more, then use the word 'many'\n",
     "instead of the actual count.\n",
     "    \n",
