--- a/Python Basics exercises/string.ipynb
+++ b/Python Basics exercises/string.ipynb
@@ -138,7 +138,7 @@
     "been changed to '+', except do not change\n",
     "the first char itself.\n",
     "\n",
-    "e.g. 'babble' yields 'ba++ble'\n",
+    "e.g. 'babble' yields 'ba++le'\n",
     "\n",
     "Assume that the string is length 1 or more.\n",
     "\n",
