show reference output

--- a/Python Basics exercises/wordcount.ipynb
+++ b/Python Basics exercises/wordcount.ipynb
@@ -103,6 +103,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!wget -O- https://raw.githubusercontent.com/eladeyal-intel/python_exercise/master/Python%20Basics%20exercises/wordcount_output.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "print_top('wordcount_input.txt')"
    ]
   }
