--- a/Python Basics exercises/wordcount.ipynb
+++ b/Python Basics exercises/wordcount.ipynb
@@ -103,7 +103,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!wget -O- https://raw.githubusercontent.com/eladeyal-intel/python_exercise/master/Python%20Basics%20exercises/wordcount_output.txt"
+    "# This is what the output should look like:\n",
+    "\n",
+    "!wget -q -O- https://raw.githubusercontent.com/eladeyal-intel/python_exercise/master/Python%20Basics%20exercises/wordcount_output.txt"
    ]
   },
   {
