--- a/Python Basics exercises/wordcount.ipynb
+++ b/Python Basics exercises/wordcount.ipynb
@@ -116,6 +116,17 @@
    "source": [
     "print_top('wordcount_input.txt')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This is what the output should look like:\n",
+    "\n",
+    "!wget -q -O- https://raw.githubusercontent.com/eladeyal-intel/python_exercise/master/Python%20Basics%20exercises/printtop_output.txt"
+   ]
   }
  ],
  "metadata": {
