--- a/Python Basics exercises solutions/list2.ipynb
+++ b/Python Basics exercises solutions/list2.ipynb
@@ -77,6 +77,7 @@
     "  print ('{} got: {} expected: {}'.format(prefix, repr(got), repr(expected)))\n",
     "\n",
     "test(remove_adjacent([1, 2, 2, 3]), [1, 2, 3])\n",
+    "test(remove_adjacent([6, 2, 2, 6, 2]), [6, 2, 6, 2])\n",
     "test(remove_adjacent([2, 2, 3, 3, 3]), [2, 3])\n",
     "test(remove_adjacent([]), [])"
    ]
