--- a/Python Basics exercises/list2.ipynb
+++ b/Python Basics exercises/list2.ipynb
@@ -76,6 +76,7 @@
    "outputs": [],
    "source": [
     "test(remove_adjacent([1, 2, 2, 3]), [1, 2, 3])\n",
+    "test(remove_adjacent([6, 2, 2, 6, 2]), [6, 2, 6, 2])\n",
     "test(remove_adjacent([2, 2, 3, 3, 3]), [2, 3])\n",
     "test(remove_adjacent([]), [])"
    ]
