sync exercises and solutions

--- a/Python Basics exercises solutions/list2.ipynb
+++ b/Python Basics exercises solutions/list2.ipynb
@@ -74,8 +74,15 @@
     "    prefix = ' OK '\n",
     "  else:\n",
     "    prefix = '  X '\n",
-    "  print ('{} got: {} expected: {}'.format(prefix, repr(got), repr(expected)))\n",
-    "\n",
+    "  print ('{} got: {} expected: {}'.format(prefix, repr(got), repr(expected)))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "test(remove_adjacent([1, 2, 2, 3]), [1, 2, 3])\n",
     "test(remove_adjacent([6, 2, 2, 6, 2]), [6, 2, 6, 2])\n",
     "test(remove_adjacent([2, 2, 3, 3, 3]), [2, 3])\n",
