--- a/Python Basics exercises solutions/string.ipynb
+++ b/Python Basics exercises solutions/string.ipynb
@@ -44,7 +44,7 @@
    "source": [
     "## donuts\n",
     "Given an int count of a number of donuts, return a string\n",
-    "of the form 'Number of donuts: <count>', where <count> is the number\n",
+    "of the form 'Number of donuts: COUNT', where COUNT is the number\n",
     "passed in. However, if the count is 10 or more, then use the word 'many'\n",
     "instead of the actual count.\n",
     "    \n",
@@ -153,7 +153,7 @@
     "been changed to '+', except do not change\n",
     "the first char itself.\n",
     "\n",
-    "e.g. 'babble' yields 'ba++ble'\n",
+    "e.g. 'babble' yields 'ba++le'\n",
     "\n",
     "Assume that the string is length 1 or more.\n",
     "\n",
