remove #LAB markers

--- a/Python Basics exercises solutions/list2.ipynb
+++ b/Python Basics exercises solutions/list2.ipynb
@@ -45,15 +45,11 @@
    "source": [
     "def remove_adjacent(nums):\n",
     "  # +++your code here+++\n",
-    "  # LAB(begin solution)\n",
     "  result = []\n",
     "  for num in nums:\n",
     "    if len(result) == 0 or num != result[-1]:\n",
     "      result.append(num)\n",
-    "  return result\n",
-    "  # LAB(replace solution)\n",
-    "  # return\n",
-    "  # LAB(end solution)"
+    "  return result\n"
    ]
   },
   {
@@ -107,7 +103,6 @@
    "source": [
     "def linear_merge(list1, list2):\n",
     "  # +++your code here+++\n",
-    "  # LAB(begin solution)\n",
     "  result = []\n",
     "  # Look at the two lists so long as both are non-empty.\n",
     "  # Take whichever element [0] is smaller.\n",
@@ -120,10 +115,7 @@
     "  # Now tack on what's left\n",
     "  result.extend(list1)\n",
     "  result.extend(list2)\n",
-    "  return result\n",
-    "  # LAB(replace solution)\n",
-    "  # return\n",
-    "  # LAB(end solution)"
+    "  return result\n"
    ]
   },
   {
