--- a/Python Basics exercises solutions/string.ipynb
+++ b/Python Basics exercises solutions/string.ipynb
@@ -61,14 +61,10 @@
    "source": [
     "def donuts(count):\n",
     "  # +++your code here+++\n",
-    "  # LAB(begin solution)\n",
     "  if count < 10:\n",
     "    return 'Number of donuts: ' + str(count)\n",
     "  else:\n",
-    "    return 'Number of donuts: many'\n",
-    "  # LAB(replace solution)\n",
-    "  # return\n",
-    "  # LAB(end solution)"
+    "    return 'Number of donuts: many'\n"
    ]
   },
   {
@@ -120,15 +116,11 @@
    "source": [
     "def both_ends(s):\n",
     "  # +++your code here+++\n",
-    "  # LAB(begin solution)\n",
     "  if len(s) < 2:\n",
     "    return ''\n",
     "  first2 = s[0:2]\n",
     "  last2 = s[-2:]\n",
-    "  return first2 + last2\n",
-    "  # LAB(replace solution)\n",
-    "  # return\n",
-    "  # LAB(end solution)"
+    "  return first2 + last2\n"
    ]
   },
   {
@@ -169,14 +161,10 @@
    "source": [
     "def fix_start(s):\n",
     "  # +++your code here+++\n",
-    "  # LAB(begin solution)\n",
     "  front = s[0]\n",
     "  back = s[1:]\n",
     "  fixed_back = back.replace(front, '+')\n",
-    "  return front + fixed_back\n",
-    "  # LAB(replace solution)\n",
-    "  # return\n",
-    "  # LAB(end solution)"
+    "  return front + fixed_back\n"
    ]
   },
   {
@@ -214,13 +202,9 @@
    "source": [
     "def mix_up(a, b):\n",
     "  # +++your code here+++\n",
-    "  # LAB(begin solution)\n",
     "  a_swapped = b[:2] + a[2:]\n",
     "  b_swapped = a[:2] + b[2:]\n",
-    "  return a_swapped + ' ' + b_swapped\n",
-    "  # LAB(replace solution)\n",
-    "  # return\n",
-    "  # LAB(end solution)"
+    "  return a_swapped + ' ' + b_swapped\n"
    ]
   },
   {
