--- a/Python Basics exercises solutions/string2.ipynb
+++ b/Python Basics exercises solutions/string2.ipynb
@@ -52,14 +52,10 @@
    "source": [
     "def verbing(s):\n",
     "  # +++your code here+++\n",
-    "  # LAB(begin solution)\n",
     "  if len(s) >= 3:\n",
     "    if s[-3:] != 'ing': s = s + 'ing'\n",
     "    else: s = s + 'ly'\n",
-    "  return s\n",
-    "  # LAB(replace solution)\n",
-    "  # return\n",
-    "  # LAB(end solution)"
+    "  return s\n"
    ]
   },
   {
@@ -118,15 +114,11 @@
    "source": [
     "def not_bad(s):\n",
     "  # +++your code here+++\n",
-    "  # LAB(begin solution)\n",
     "  n = s.find('not')\n",
     "  b = s.find('bad')\n",
     "  if n != -1 and b != -1 and b > n:\n",
     "    s = s[:n] + 'good' + s[b+3:]\n",
-    "  return s\n",
-    "  # LAB(replace solution)\n",
-    "  # return\n",
-    "  # LAB(end solution)"
+    "  return s\n"
    ]
   },
   {
@@ -162,7 +154,6 @@
    "source": [
     "def front_back(a, b):\n",
     "  # +++your code here+++\n",
-    "  # LAB(begin solution)\n",
     "  # Figure out the middle position of each string.\n",
     "  a_middle = len(a) // 2\n",
     "  b_middle = len(b) // 2\n",
@@ -170,10 +161,7 @@
     "    a_middle = a_middle + 1\n",
     "  if len(b) % 2 == 1:\n",
     "    b_middle = b_middle + 1 \n",
-    "  return a[:a_middle] + b[:b_middle] + a[a_middle:] + b[b_middle:]\n",
-    "  # LAB(replace solution)\n",
-    "  # return\n",
-    "  # LAB(end solution)"
+    "  return a[:a_middle] + b[:b_middle] + a[a_middle:] + b[b_middle:]\n"
    ]
   },
   {
