--- a/Python Basics exercises solutions/wordcount.ipynb
+++ b/Python Basics exercises solutions/wordcount.ipynb
@@ -79,7 +79,6 @@
     "import sys\n",
     "\n",
     "# +++your code here+++\n",
-    "## LAB(begin solution)\n",
     "\n",
     "def word_count_dict(filename):\n",
     "  \"\"\"Returns a word/count dict for this filename.\"\"\"\n",
@@ -119,8 +118,7 @@
     "\n",
     "  # Print the first 5\n",
     "  for item in items[:5]:\n",
-    "    print(item[0], item[1])\n",
-    "# LAB(end solution)"
+    "    print(item[0], item[1])\n"
    ]
   },
   {
