--- a/Python Basics exercises solutions/list.ipynb
+++ b/Python Basics exercises solutions/list.ipynb
@@ -54,15 +54,11 @@
    "source": [
     "def match_ends(words):\n",
     "  # +++your code here+++\n",
-    "  # LAB(begin solution)\n",
     "  count = 0\n",
     "  for word in words:\n",
     "    if len(word) >= 2 and word[0] == word[-1]:\n",
     "      count = count + 1\n",
-    "  return count\n",
-    "  # LAB(replace solution)\n",
-    "  # return\n",
-    "  # LAB(end solution)"
+    "  return count\n"
    ]
   },
   {
@@ -114,7 +110,6 @@
    "source": [
     "def front_x(words):\n",
     "  # +++your code here+++\n",
-    "  # LAB(begin solution)\n",
     "  # Put each word into the x_list or the other_list.\n",
     "  x_list = []\n",
     "  other_list = []\n",
@@ -123,10 +118,7 @@
     "      x_list.append(w)\n",
     "    else:\n",
     "      other_list.append(w)\n",
-    "  return sorted(x_list) + sorted(other_list)\n",
-    "  # LAB(replace solution)\n",
-    "  # return\n",
-    "  # LAB(end solution)"
+    "  return sorted(x_list) + sorted(other_list)\n"
    ]
   },
   {
@@ -163,7 +155,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# LAB(begin solution)\n",
     "# Extract the last element from a tuple -- used for custom sorting below.\n",
     "\n",
     "def last(a):\n",
@@ -173,10 +164,7 @@
     "def sort_last(tuples):\n",
     "  # +++your code here+++\n",
     "  # LAB(begin solution)\n",
-    "  return sorted(tuples, key=last)\n",
-    "  # LAB(replace solution)\n",
-    "  # return\n",
-    "  # LAB(end solution)"
+    "  return sorted(tuples, key=last)\n"
    ]
   },
   {
