--- a/Python Basics exercises/wordcount.ipynb
+++ b/Python Basics exercises/wordcount.ipynb
@@ -43,7 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!wget https://raw.githubusercontent.com/eladeyal-intel/python_exercise/master/Python%20Basics%20exercises/wordcount_input.txt"
+    "!wget -N https://raw.githubusercontent.com/eladeyal-intel/python_exercise/master/Python%20Basics%20exercises/wordcount_input.txt"
    ]
   },
   {
