--- a/Python Basics exercises solutions/string2.ipynb
+++ b/Python Basics exercises solutions/string2.ipynb
@@ -53,7 +53,7 @@
     "def verbing(s):\n",
     "  # +++your code here+++\n",
     "  if len(s) >= 3:\n",
-    "    if s[-3:] != 'ing': s = s + 'ing'\n",
+    "    if not s.endswith('ing'): s = s + 'ing'\n",
     "    else: s = s + 'ly'\n",
     "  return s\n"
    ]
