--- a/Python Basics exercises solutions/list.ipynb
+++ b/Python Basics exercises solutions/list.ipynb
@@ -54,11 +54,8 @@
    "source": [
     "def match_ends(words):\n",
     "  # +++your code here+++\n",
-    "  count = 0\n",
-    "  for word in words:\n",
-    "    if len(word) >= 2 and word[0] == word[-1]:\n",
-    "      count = count + 1\n",
-    "  return count\n"
+    "  matching_words = [w for w in words if len(w) >= 2 and w[0] == w[-1]]\n",
+    "  return len(matching_words)\n"
    ]
   },
   {
