Do not use sort()

--- a/Python Basics exercises solutions/list2.ipynb
+++ b/Python Basics exercises solutions/list2.ipynb
@@ -92,7 +92,7 @@
     "## linear_merge\n",
     "Given two lists sorted in increasing order, create and return a merged list of all the elements in sorted order. You may modify the passed in lists.\n",
     "\n",
-    "Ideally, the solution should work in \"linear\" time, making a single pass of both lists."
+    "Ideally, the solution should work in \"linear\" time, making a single pass of both lists. Do not use sort() or sorted()."
    ]
   },
   {
